--- a/index.html
+++ b/index.html
@@ -104,5 +104,13 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <script>
+            $(function (){
+
+                // $.ajax(url: "https://api.yelp.com/v2/search/?term=happy hour&location=Pomona, CA&sort=2").done(function(data){console.log(data)});
+                $.ajax({url: "https://api.yelp.com/v2/search/?term=happy hour&location=Pomona, CA&sort=2"}).done(function(data){console.log(data)});
+            })
+        </script>
     </body>
 </html>
